--- a/docs/sigil/examples/hello-world.mdx
+++ b/docs/sigil/examples/hello-world.mdx
@@ -13,7 +13,7 @@ This example illustrates the fundamental structure of a simple Sigil contract, s
 
 Includes `kontor:built-in` via the `wit/deps/built-in.wit` symlink and exports two functions: `init` (called once at deployment) and `hello-world` (returns a greeting string).
 
-```wit contract/wit/contract.wit
+```wit
 package root:component;
 
 world root {
