--- a/docs/introduction/core-concepts.mdx
+++ b/docs/introduction/core-concepts.mdx
@@ -4,7 +4,7 @@ mode: wide
 ---
 
 <div className="page-intro">
-Four fundamental concepts underpin how Kontor works: embedded consensus, the dual-token model, the hybrid UTXO model, and atomic swaps.
+Three fundamental concepts underpin how Kontor works: embedded consensus, the dual-token model, and the hybrid UTXO support.
 </div>
 
 ## Embedded Consensus
@@ -39,7 +39,7 @@ Kontor addresses this by introducing KOR, a token with economic properties purpo
 
 For comprehensive economic analysis, see the [Economics](/docs/economics/introduction) section.
 
-## Hybrid UTXO Model
+## Hybrid UTXO Support
 
 Kontor uses a novel hybrid model where assets can exist in two states:
 
