--- a/docs/introduction/home.mdx
+++ b/docs/introduction/home.mdx
@@ -4,8 +4,10 @@ mode: wide
 ---
 
 <div className="page-intro">
-  Kontor is a next-generation Bitcoin metaprotocol that brings programmable assets and scalable file storage directly to the Bitcoin blockchain. Build rich smart contracts and store data perpetually—all secured by Bitcoin's hashpower, with no validators, bridges, sequencers or sidechains.
+  Kontor is a next-generation Bitcoin metaprotocol that brings programmable assets and scalable file storage directly to the Bitcoin blockchain. Build rich smart contracts and store data perpetually—all on Bitcoin.
 </div>
+
+**Current Status:** _Kontor is under active development with Bitcoin `signet` support._ For the latest updates, please see the [official Kontor website](https://kontor.network).
 
 Kontor extends Bitcoin's functionality by building directly on top of it. Each Kontor transaction is a Bitcoin transaction, fully secured by Bitcoin's hashpower. Every state transition is deterministic and verifiable by anyone running an indexer. We're bringing new functionality to Bitcoin without trying to turn it into something it isn't—no separate chains, no alternative consensus, no trust assumptions beyond Bitcoin itself.
 
@@ -13,26 +15,22 @@ Kontor extends Bitcoin's functionality by building directly on top of it. Each K
 
 Write, deploy and run rich smart contract applications directly on the Bitcoin blockchain. The Sigil framework uses the WebAssembly Component Model to make writing contracts easier than ever before, with strong type safety, native cross-contract calls and best-in-class developer ergonomics.
 
-[Start building with Sigil →](/docs/sigil/introduction)
+[Start building with the Sigil framework →](/docs/sigil/introduction)
 
 ## Perpetual File Storage
 
 Pay once, store forever. Kontor's storage protocol provides scalable, permanent file storage where the data lives off-chain but the storage *system* itself is entirely on-chain. Files from kilobytes to gigabytes with logarithmic cost scaling and Byzantine fault-tolerant availability guarantees.
 
-[Learn about storage →](/docs/storage/introduction)
+[Learn about Kontor's scalable storage system →](/docs/storage/introduction)
 
-## Economic Model
+## Kontor Economics
 
 The Kontor economic model was designed from first principles to support data storage and smart contract execution. BTC remains the unit of account while KOR meters execution and incentivizes storage through perpetual emissions. Dynamic mechanisms ensure network health and long-term sustainability.
 
-[Explore the economics →](/docs/economics/introduction)
+[Explore the economics of the Kontor ecosystem →](/docs/economics/introduction)
 
 ## Resources
 
 Access technical specifications, comprehensive FAQs, and developer resources.
 
 [View all resources →](/docs/resources/faq)
-
----
-
-**Current Status:** Kontor is under active development with Bitcoin signet and testnet support. The Indexer codebase is fully open-source and available on GitHub.
