--- a/docs/resources/economic-model.mdx
+++ b/docs/resources/economic-model.mdx
@@ -1,14 +1,12 @@
 ---
-title: Economic Model
+title: Kontor Economic Model
 mode: wide
 ---
-
-# Kontor Economic Model
 
 The economic model document provides detailed analysis of KOR tokenomics, emission schedules, and the economic incentives that sustain the protocol.
 
 <a href="https://raw.githubusercontent.com/KontorProtocol/Documentation/main/img/2025-11-11_kontor-economic-model.pdf" target="_blank" className="block">
-  <Card title="Download Economic Model" icon="file-pdf">
+  <Card title="Kontor Economic Model" icon="file-pdf">
     Read the complete economic analysis and tokenomics specification (PDF)
   </Card>
 </a>
