--- a/docs/resources/whitepaper.mdx
+++ b/docs/resources/whitepaper.mdx
@@ -1,16 +1,12 @@
 ---
-title: Whitepaper
+title: Kontor Protocol Whitepaper
 mode: wide
 ---
-
-<div className="page-intro">
-Comprehensive technical specification covering protocol design, architecture, and implementation details.
-</div>
 
 The comprehensive Kontor whitepaper provides in-depth technical details about the protocol design, architecture, and implementation.
 
 <a href="https://raw.githubusercontent.com/KontorProtocol/Documentation/main/img/2025-11-11_kontor-whitepaper.pdf" target="_blank" className="block">
-  <Card title="Download Kontor Whitepaper" icon="file-pdf">
+  <Card title="Kontor Protocol Whitepaper" icon="file-pdf">
     Read the full technical specification and protocol design (PDF)
   </Card>
 </a>
