Cleanup Sigil Docs

--- a/docs/introduction/home.mdx
+++ b/docs/introduction/home.mdx
@@ -4,12 +4,12 @@ mode: wide
 ---
 
 <div className="page-intro">
-  Kontor is a next-generation Bitcoin metaprotocol that brings programmable assets and scalable file storage directly to the Bitcoin blockchain. Build rich smart contracts and store data perpetually—all on Bitcoin.
+  Kontor is a next-generation Bitcoin metaprotocol that brings programmable assets and scalable file storage directly to the Bitcoin blockchain.
 </div>
 
-**Current Status:** _Kontor is under active development with Bitcoin `signet` support._ For the latest updates, please see the [official Kontor website](https://kontor.network).
-
 Kontor extends Bitcoin's functionality by building directly on top of it. Each Kontor transaction is a Bitcoin transaction, fully secured by Bitcoin's hashpower. Every state transition is deterministic and verifiable by anyone running an indexer. We're bringing new functionality to Bitcoin without trying to turn it into something it isn't—no separate chains, no alternative consensus, no trust assumptions beyond Bitcoin itself.
+
+**Current Status:** Kontor is under active development with Bitcoin `signet` support. For the latest updates, please see the [official Kontor website](https://kontor.network).
 
 ## Smart Contracts with Sigil
 
