Fix MDX parsing errors with angle brackets
- Escape angle brackets in Map<Key, Value> in contract-structure.mdx
- Escape angle brackets in Result<T> type annotations in testing.mdx

--- a/docs/sigil/reference/contract-structure.mdx
+++ b/docs/sigil/reference/contract-structure.mdx
@@ -278,7 +278,7 @@ fn fallback(ctx: &FallContext, expr: String) -> String {
 **StorageRoot**
 - Marks the root struct or enum for contract storage
 
-**Map<Key, Value>**
+**Map&lt;Key, Value&gt;**
 - Key-value store for collections (e.g., account balances)
 - Supports `get`, `set`, and `keys` methods
 
