Fix incorrect test attribute in error-handling reference
- Change #[runtime(contracts_dir = ...)] to #[testlib::test]
- The runtime attribute doesn't exist in testlib framework
- Matches actual test examples throughout codebase

--- a/docs/sigil/reference/error-handling.mdx
+++ b/docs/sigil/reference/error-handling.mdx
@@ -313,7 +313,7 @@ fn withdraw(ctx: &ProcContext, token: ContractAddress, amount: Integer) -> Resul
 ### Testing Expected Errors
 
 ```rust
-#[runtime(contracts_dir = "../../example-contracts")]
+#[testlib::test]
 async fn test_insufficient_funds() -> Result<()> {
     let alice = runtime.identity().await?;
     let bob = runtime.identity().await?;
